forestx-rs/tui/src/chatwidget/snapshots/forestx_tui__chatwidget__tests__windows_sandbox_required_fallback_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Couldn't set up your sandbox with Administrator permissions

  Your organization requires the default sandbox before Forestx can continue.
  Learn more <https://developers.openai.com/forestx/windows>

› 1. Try setting up admin sandbox again
  2. Quit

  Press enter to confirm or esc to go back
